[gd_scene load_steps=2 format=3 uid="uid://mikbcnflpeb0"]

[ext_resource type="Script" path="res://Skills/Boss2/Thunder/GD_Thunder.gd" id="1_cn8ss"]

[node name="S_Thunder" type="Node2D"]
script = ExtResource("1_cn8ss")

[node name="ThunderTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Hurt_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="ThunderTimer" to="." method="_on_thunder_timer_timeout"]
[connection signal="timeout" from="Hurt_Timer" to="." method="_on_hurt_timer_timeout"]
